# Neural-Lattice-Architecture-and-Workflow-Optimization

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/__tests__/: App.test.jsx  api.test.js
dashboard/src/components/: CreateDocumentForm.jsx  DocumentTable.jsx  EisenhowerMatrix.jsx  SessionPanel.jsx  ZoneOverview.jsx
docs/: BRANCH_AUDIT_REPORT.md  BRANCH_REVIEW_AND_MERGE_REPORT.md  P1-BIZCASE-002.md  P1-CHARTER-001.md  P1-FEAS-003.md  P1-RACI-006.md  P1-SOW-004.md  P1-STAKE-005.md  P1-VISION-008.md  P9-ACCEPT-076.md  P9-CLOSE-075.md  P9-DRP-080.md  P9-MAINT-078.md  P9-PIR-079.md  P9-TRANS-077.md  SDLC-INDEX.md  SDLC_Stage1_Planning.md
neural_lattice/: __init__.py  document_store.py  metadata_engine.py  quantum_nexus_forge.py  session_manager.py  zone_engine.py
neural_lattice/api/: app.py  models.py
neural_lattice/meta/: config.py  schemas.py
neurolattus/: __init__.py  core.py  optimizer.py  workflow.py  zones.py
tests/: conftest.py  test_api.py  test_config.py  test_document_store.py  test_edge_cases.py  test_integration.py  test_metadata_engine.py  test_neurolattus.py  test_quantum_nexus_forge.py  test_schemas.py  test_session_manager.py  test_zone_engine.py
