[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurolattus"
version = "0.1.0"
description = "Neural Lattice Architecture for Workflow Optimization"
requires-python = ">=3.11"
license = {text = "CC-BY-4.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
